# ts-gpu-systems-bench

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml  requirements-models.txt  requirements-tilelang.txt  requirements.txt
configs/: config.yaml
configs/data/: electricity.yaml  electricity_ltsf.yaml  electricity_uci.yaml  etth1.yaml  etth1_xl.yaml  etth2.yaml  ettm1.yaml  ettm2.yaml  exchange_rate.yaml  exchange_rate_ltsf.yaml  jena_climate.yaml  solar.yaml  solar_ltsf.yaml  traffic.yaml  traffic_ltsf.yaml
configs/logging/: mlflow.yaml
configs/model/: mamba.yaml  transformer.yaml
configs/preprocess/: compile.yaml  pytorch_eager.yaml  tilelang.yaml  triton.yaml
configs/sweep/: medium.yaml  realworld.yaml
configs/train/: default.yaml  realworld.yaml
notebooks/: analysis.ipynb
reports/: traffic_coverage_sweep_2026-05-02_table.md  traffic_stress_sweep_2026-05-02_table.md  traffic_sweeps_2026-05-02.md
results/: sweep_a7de8f1cee76457fae42fad776e995a5_backend_summary.md  sweep_a7de8f1cee76457fae42fad776e995a5_staff_metrics.md  sweep_a7de8f1cee76457fae42fad776e995a5_top10.md
scripts/: benchmark_preprocess.py  check_runtime.py  download_data.py  install_flash_attn.sh  sweep.py  train.py
src/: __init__.py
src/data/: __init__.py  benchmarks.py  etth1.py
src/models/: __init__.py  factory.py  mamba_model.py  transformer_model.py
src/preprocess/: __init__.py  pytorch_backend.py  registry.py  tilelang_backend.py  (+1 more)
tests/: test_data_pipeline.py  test_models.py  test_multidataset_support.py  test_preprocess_backends.py  test_runner_constraints.py
(+7 files in other folders)
