[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-gpu-systems-bench"
version = "0.1.0"
description = "ETTh1 long-context forecasting benchmark with GPU preprocessing kernels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "torch>=2.5",
  "triton>=3.0",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "mlflow>=2.17",
  "optuna>=3.6",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "scikit-learn>=1.5",
  "pytest>=8.3",
  "jupyter>=1.1",
  "tabulate>=0.10.0",
]

[project.optional-dependencies]
models = [
  "mamba-ssm>=2.2",
  "flash-attn>=2.7",
]
tilelang = [
  "tilelang>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
